--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,76 +1,27 @@
 /*===== GOOGLE FONTS =====*/
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
-/*===== VARIABLES CSS =====*/
-:root {
-  --header-height: 3rem;
-  /*===== Font weight =====*/
-
-  --font-meduim: 500;
-  --font-semi-bold: 600;
-  --font-bold: 700;
-
-  /*===== Colores =====*/
-
-  --dark-color: #141414;
-  --dark-color-light: #8a8a8a;
-  --dark-color-lighten: #f2f2f2;
-  --white-color: #fff;
-
-  /*===== Font and typography =====*/
-
-  --body-font: "Poppins", sans-serif;
-  --big-font-size: 1.25rem;
-  --bigger-font-size: 1.5rem;
-  --biggest-font-size: 2rem;
-  --h2-font-size: 1.25rem;
-  --normal-font-size: 0.938rem;
-  --smaller-font-size: 0.813rem;
-
-  /*===== Margenes =====*/
-
-  --mb-1: 0.5rem;
-  --mb-2: 1rem;
-  --mb-3: 1.5rem;
-  --mb-4: 2rem;
-  --mb-5: 2.5rem;
-  --mb-6: 3rem;
-
-  /*===== z index =====*/
-
-  --z-fixed: 100;
-
-  /*===== Rotate img =====*/
-  --rotate-img: rotate(-30deg);
-}
-
-@media screen and (min-width: 768px) {
-  :root {
-    --big-font-size: 1rem;
-    --bigger-font-size: 2rem;
-    --biggest-font-size: 3rem;
-    --normal-font-size: 1rem;
-    --smaller-font-size: 0.875rem;
-  }
-}
+/*===== Font weight =====*/
+/*===== Colores =====*/
+/*===== Font and typography =====*/
+/*===== Margenes =====*/
+/*===== z index =====*/
+/*===== Rotate img =====*/
 /*===== BASE =====*/
 *,
 ::before,
 ::after {
-  box-sizing: border-box;
-}
+  box-sizing: border-box; }
 
 html {
-  scroll-behavior: smooth;
-}
+  scroll-behavior: smooth; }
 
 body {
-  margin: var(--header-height) 0 0 0;
-  font-family: var(--body-font);
-  font-size: var(--normal-font-size);
-  font-weight: var(--font-meduim);
-  color: var(--dark-color);
-  line-height: 1.6;
-}
+  margin: 3rem 0 0 0;
+  font-family: "Poppins", sans-serif;
+  font-size: 0.938rem;
+  font-weight: 500;
+  color: #141414;
+  line-height: 1.6; }
 
 h1,
 h2,
@@ -78,49 +29,42 @@ h3,
 h4,
 h5,
 h6 {
-  margin: 0;
-}
+  margin: 0; }
 
 ul {
   padding: 0;
-  list-style: none;
-}
+  list-style: none; }
 
 a {
   text-decoration: none;
-  color: var(--dark-color);
-}
+  color: #141414; }
 
 img {
   max-width: 100%;
   height: auto;
-  display: block;
-}
+  display: block; }
+
 /*===== CLASS CSS ===== */
 .section {
-  padding: 5rem 0 2rem;
-}
+  padding: 5rem 0 2rem; }
+  .section-title {
+    position: relative;
+    font-size: 1rem;
+    margin-bottom: 2rem;
+    text-align: center;
+    letter-spacing: 0.1rem;
+    text-transform: uppercase; }
+    .section-title::after {
+      content: "";
+      position: absolute;
+      width: 56px;
+      height: 0.18rem;
+      top: -1rem;
+      left: 0;
+      right: 0;
+      margin: auto;
+      background-color: #141414; }
 
-.section-title {
-  position: relative;
-  font-size: var(--big-font-size);
-  margin-bottom: var(--mb-4);
-  text-align: center;
-  letter-spacing: 0.1rem;
-  text-transform: uppercase;
-}
-
-.section-title::before {
-  content: "";
-  position: absolute;
-  width: 56px;
-  height: 0.18rem;
-  top: -1rem;
-  left: 0;
-  right: 0;
-  margin: auto;
-  background-color: var(--dark-color);
-}
 /*===== LAYOUT =====*/
 .bd-grid {
   max-width: 1024px;
@@ -128,156 +72,121 @@ img {
   grid-template-columns: 100%;
   column-gap: 2rem;
   width: calc(100% - 2rem);
-  margin-left: var(--mb-2);
-  margin-right: var(--mb-2);
-}
+  margin-left: 1rem;
+  margin-right: 1rem; }
 
 .l-header {
   width: 100%;
   position: fixed;
   top: 0;
   left: 0;
-  z-index: var(--z-fixed);
-  background-color: var(--dark-color-light);
-}
-/*===== NAV =====*/
-.nav {
-  height: var(--header-height);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
+  z-index: 100;
+  background-color: #8a8a8a; }
 
 @media screen and (max-width: 768px) {
   .nav__menu {
     position: fixed;
-    top: var(--header-height);
+    top: 3rem;
     left: -100%;
     width: 70%;
     height: 100vh;
     padding: 2rem;
-    background-color: var(--white-color);
-    transition: 0.6s cubic-bezier(0.68, -0.55, 0.27, 1.55);
-  }
-}
+    background-color: #fff;
+    transition: 0.6s cubic-bezier(0.68, -0.55, 0.27, 1.55); } }
 
-.nav__item {
-  margin-bottom: var(--mb-4);
-}
+.nav {
+  height: 3rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center; }
+  .nav__item {
+    margin-bottom: 2rem; }
+  .nav__logo {
+    font-weight: 600; }
+  .nav__toggle, .nav__shop {
+    font-size: 1.3rem;
+    cursor: pointer; }
 
-.nav__logo {
-  font-weight: var(--font-semi-bold);
-}
-
-.nav__toggle,
-.nav__shop {
-  font-size: 1.3rem;
-  cursor: pointer;
-}
 /*Show menu*/
 .show {
-  left: 0;
-}
+  left: 0; }
+
 /*Active link*/
 .active {
-  position: relative;
-}
+  position: relative; }
+  .active::before {
+    content: "";
+    position: absolute;
+    bottom: -0.5rem;
+    left: 45%;
+    width: 4px;
+    height: 4px;
+    background-color: #141414;
+    border-radius: 50%; }
 
-.active::before {
-  content: "";
-  position: absolute;
-  bottom: -0.5rem;
-  left: 45%;
-  width: 4px;
-  height: 4px;
-  background-color: var(--dark-color);
-  border-radius: 50%;
-}
-/*Change color header*/
 .scroll-header {
-  background-color: var(--white-color);
-  box-shadow: 0 2px 4px rgba(0, 0, 0.1);
-}
-/*===== HOME =====*/
+  background-color: #fff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); }
+
 .home {
-  background-color: var(--dark-color-light);
-  overflow: hidden;
-}
+  background-color: #8a8a8a;
+  overflow: hidden; }
+  .home__container {
+    height: calc(100vh - 3rem); }
+  .home__sneaker {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-self: center; }
+  .home__shape {
+    width: 220px;
+    height: 220px;
+    background-color: #141414;
+    border-radius: 50%; }
+  .home__img {
+    position: absolute;
+    top: 1.5rem;
+    max-width: initial;
+    width: 275px;
+    transform: rotate(-30deg); }
+  .home__new {
+    display: block;
+    font-size: 0.813rem;
+    font-weight: 600;
+    margin-bottom: 1rem; }
+  .home__title {
+    font-size: 1.5rem;
+    margin-bottom: 0.5rem; }
+  .home__description {
+    margin-bottom: 3rem; }
 
-.home__container {
-  height: calc(100vh - var(--header-height));
-}
-
-.home__sneaker {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-self: center;
-}
-.home__shape {
-  width: 220px;
-  height: 220px;
-  background-color: var(--dark-color);
-  border-radius: 50%;
-}
-
-.home__img {
-  position: absolute;
-  top: 1.5rem;
-  max-width: initial;
-  width: 275px;
-  transform: var(--rotate-img);
-}
-
-.home__new {
-  display: block;
-  font-size: var(--smaller-font-size);
-  font-weight: var(--font-semi-bold);
-  margin-bottom: var(--mb-2);
-}
-
-.home__title {
-  font-size: var(--bigger-font-size);
-  margin-bottom: var(--mb-1);
-}
-.home__description {
-  margin-bottom: var(--mb-6);
-}
 /*BUTTONS*/
 .button {
   display: inline-block;
-  background-color: var(--dark-color);
-  color: var(--white-color);
+  background-color: #141414;
+  color: #fff;
   padding: 1.5rem 1.125rem;
-  font-weight: var(--font-meduim);
+  font-weight: 500;
   border-radius: 0.5rem;
-  transition: 0.3s;
-}
+  transition: 0.3s; }
+  .button:hover {
+    transform: translateY(-0.25rem); }
+  .button-light {
+    display: inline-flex;
+    color: #141414;
+    font-weight: 700;
+    align-items: center; }
+    .button-light:hover .button-icon {
+      transform: translateX(0.25rem); }
+  .button-icon {
+    font-size: 1.25rem;
+    margin-left: 0.5rem;
+    transition: 0.3s; }
 
-.button:hover {
-  transform: translateY(-0.25rem);
-}
-
-.button-light {
-  display: inline-flex;
-  color: var(--dark-color);
-  font-weight: var(--font-bold);
-  align-items: center;
-}
-
-.button-light:hover .button-icon {
-  transform: translateX(0.25rem);
-}
-.button-icon {
-  font-size: 1.25rem;
-  margin-left: var(--mb-1);
-  transition: 0.3s;
-}
 /*===== FEATURED =====*/
 .featured__container {
   row-gap: 2rem;
-  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-}
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); }
 
 .sneaker {
   position: relative;
@@ -285,363 +194,276 @@ img {
   flex-direction: column;
   align-items: center;
   padding: 2rem;
-  background-color: var(--dark-color-lighten);
+  background-color: #f2f2f2;
   border-radius: 0.5rem;
-  transition: 0.3s;
-}
+  transition: 0.3s; }
+  .sneaker:hover {
+    transform: translateY(-0.5rem); }
+  .sneaker__sale {
+    position: absolute;
+    left: 0.5rem;
+    background-color: #141414;
+    color: #fff;
+    padding: 0.25rem 0.5rem;
+    border-radius: 0.25rem;
+    font-size: 1.25rem;
+    transform: rotate(-90deg);
+    letter-spacing: 0.1rem; }
+  .sneaker__img {
+    width: 220px;
+    margin-top: 1.5rem;
+    margin-bottom: 3rem;
+    transform: rotate(-30deg);
+    filter: drop-shadow(0 12px 8px rgba(0, 0, 0, 0.2)); }
+  .sneaker__name, .sneaker__price {
+    font-size: 1.25rem;
+    letter-spacing: 0.1rem;
+    font-weight: 700; }
+  .sneaker__name {
+    margin-bottom: 0.5rem; }
+  .sneaker__price {
+    margin-bottom: 2rem; }
 
-.sneaker__sale {
-  position: absolute;
-  left: 0.5rem;
-  background-color: var(--dark-color);
-  color: var(--white-color);
-  padding: 0.25rem 0.5rem;
-  border-radius: 0.25rem;
-  font-size: var(--h2-font-size);
-  transform: rotate(-90deg);
-  letter-spacing: 0.1rem;
-}
-
-.sneaker__img {
-  width: 220px;
-  margin-top: var(--mb-3);
-  margin-bottom: var(--mb-6);
-  transform: var(--rotate-img);
-  filter: drop-shadow(0 12px 8px rgba(0, 0, 0.2));
-}
-
-.sneaker__name,
-.sneaker__price {
-  font-size: var(--h2-font-size);
-  letter-spacing: 0.1rem;
-  font-weight: var(--font-bold);
-}
-.sneaker__name {
-  margin-bottom: var(--mb-1);
-}
-
-.sneaker__price {
-  margin-bottom: var(--mb-4);
-}
-
-.sneaker:hover {
-  transform: translateY(-0.5rem);
-}
 /*===== COLLECTION =====*/
 .collection__container {
   row-gap: 2rem;
-  justify-content: center;
-}
+  justify-content: center; }
+
 .collection__card {
   position: relative;
   display: flex;
   height: 328px;
-  background-color: var(--dark-color-lighten);
+  background-color: #f2f2f2;
   padding: 2rem;
   border-radius: 0.5rem;
-  transition: 0.3s;
-}
+  transition: 0.3s; }
 
 .collection__data {
-  align-self: flex-end;
-}
+  align-self: flex-end; }
 
 .collection__img {
   position: absolute;
   top: 0;
   right: 0;
-  width: 230px;
-}
+  width: 230px; }
 
 .collection__name {
-  font-size: var(--bigger-font-size);
-  margin-bottom: 0.25rem;
-}
+  font-size: 1.5rem;
+  margin-bottom: 0.25rem; }
 
 .collection__description {
-  margin-bottom: var(--mb-2);
-}
+  margin-bottom: 1rem; }
 
 .collection__card:hover {
-  transform: translateY(-0.5rem);
-}
+  transform: translateY(-0.5rem); }
+
 /*===== WOMEN SNEAKERS =====*/
 .women__container {
   row-gap: 2rem;
-  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-}
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); }
+
 /*===== OFFER =====*/
 .offer__container {
   grid-template-columns: 55% 45%;
-  background-color: var(--dark-color-lighten);
+  background-color: #f2f2f2;
   column-gap: 0;
   border-radius: 0.5rem;
-  justify-content: center;
-}
+  justify-content: center; }
+
 .offer__data {
-  padding: 4rem 0 4rem 1.5rem;
-}
+  padding: 4rem 0 4rem 1.5rem; }
 
 .offer__title {
-  font-size: var(--biggest-font-size);
-  margin-bottom: var(--mb-3);
-}
+  font-size: 2rem;
+  margin-bottom: 1.5rem; }
 
 .offer__img {
-  width: 153px;
-}
+  width: 153px; }
+
 /*===== NEW COLLECTION  =====*/
 .new__container {
-  row-gap: 2rem;
-}
+  row-gap: 2rem; }
 
 .new__mens {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-color: var(--dark-color-lighten);
+  background-color: #f2f2f2;
   border-radius: 0.5rem;
-  padding: 2rem;
-}
-
-.new__mens-img {
-  width: 276px;
-  margin-bottom: var(--mb-3);
-}
+  padding: 2rem; }
+  .new__mens-img {
+    width: 276px;
+    margin-bottom: 1.5rem; }
 
 .new__title {
-  font-size: var(--bigger-font-size);
-  margin-bottom: 0.25rem;
-}
+  font-size: 1.5rem;
+  margin-bottom: 0.25rem; }
 
 .new__price {
   display: block;
-  margin-bottom: var(--mb-3);
-}
+  margin-bottom: 1.5rem; }
 
 .new__sneaker {
   display: grid;
   gap: 1.5rem;
-  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-}
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); }
+  .new__sneaker-card {
+    position: relative;
+    padding: 3.5rem 1.5rem;
+    background-color: #f2f2f2;
+    border-radius: 0.5rem;
+    overflow: hidden;
+    display: flex;
+    justify-content: center; }
+    .new__sneaker-card:hover .new__sneaker-overlay {
+      bottom: 0; }
+    .new__sneaker-card:hover .new__sneaker-img {
+      transform: scale(1.2); }
+  .new__sneaker-img {
+    width: 220px;
+    transition: 0.3s; }
+  .new__sneaker-overlay {
+    position: absolute;
+    left: 0;
+    bottom: -100%;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(138, 138, 138, 0.3);
+    transition: 0.3s; }
 
-.new__sneaker-card {
-  position: relative;
-  padding: 3.5rem 1.5rem;
-  background-color: var(--dark-color-lighten);
-  border-radius: 0.5rem;
-  overflow: hidden;
-  display: flex;
-  justify-content: center;
-}
-
-.new__sneaker-img {
-  width: 220px;
-  transition: 0.3s;
-}
-
-.new__sneaker-overlay {
-  position: absolute;
-  left: 0;
-  bottom: -100%;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: rgba(138, 138, 138, 0.3);
-  transition: 0.3s;
-}
-.new__sneaker-card:hover .new__sneaker-overlay {
-  bottom: 0;
-}
-.new__sneaker-card:hover .new__sneaker-img {
-  transform: scale(1.2);
-}
 /*===== NEWSLETTER =====*/
 .newsletter__container {
-  background-color: var(--dark-color);
-  color: var(--white-color);
+  background-color: #141414;
+  color: #fff;
   padding: 2rem 0.5rem;
   border-radius: 0.5rem;
-  text-align: center;
-}
+  text-align: center; }
 
 .newsletter__title {
-  font-size: var(--bigger-font-size);
-  margin-bottom: var(--mb-2);
-}
+  font-size: 1.5rem;
+  margin-bottom: 1rem; }
+
 .newsletter__description {
-  margin-bottom: var(--mb-5);
-}
+  margin-bottom: 2.5rem; }
 
 .newsletter__subscribe {
   display: flex;
   column-gap: 0.5rem;
-  background-color: var(--white-color);
+  background-color: #fff;
   padding: 0.5rem;
-  border-radius: 0.5rem;
-}
+  border-radius: 0.5rem; }
 
 .newsletter__input {
   outline: none;
   border: none;
   width: 90%;
-  font-size: var(--normal-font-size);
-}
+  font-size: 0.938rem; }
+  .newsletter__input::placeholder {
+    color: #141414;
+    font-family: "Poppins", sans-serif;
+    font-size: 0.938rem;
+    font-weight: 600; }
 
-.newsletter__input::placeholder {
-  color: var(--dark-color);
-  font-family: var(--body-font);
-  font-size: var(--normal-font-size);
-  font-weight: var(--font-semi-bold);
-}
 /*===== FOOTER =====*/
 .footer__container {
-  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-}
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); }
 
 .footer__box {
-  margin-bottom: var(--mb-4);
-}
+  margin-bottom: 2rem; }
 
 .footer__title {
-  font-size: var(--big-font-size);
-  text-transform: uppercase;
-}
+  font-size: 1rem;
+  text-transform: uppercase; }
 
 .footer__link {
   display: block;
   width: max-content;
-  margin-bottom: var(--mb-1);
-}
+  margin-bottom: 0.5rem; }
 
 .footer__social {
   font-size: 1.5rem;
-  margin-right: 1.25rem;
-}
+  margin-right: 1.25rem; }
 
 .footer__copy {
   padding: 3rem;
-  font-size: var(--smaller-font-size);
-  color: var(--dark-color-light);
-  text-align: center;
-}
-/* ===== MEDIA QUERIES=====*/
+  font-size: 0.813rem;
+  color: #8a8a8a;
+  text-align: center; }
+
+/*===== MEDIA QUERIES =====*/
 @media screen and (min-width: 576px) {
   .collection__container {
-    grid-template-columns: 415px;
-  }
-
+    grid-template-columns: 415px; }
   .collection__img {
-    width: 260px;
-  }
-
+    width: 260px; }
   .offer__container {
-    grid-template-columns: max-content max-content;
-  }
+    grid-template-columns: max-content max-content; }
   .offer__data {
-    text-align: center;
-  }
+    text-align: center; }
   .new__mens {
-    align-items: center;
-  }
-}
+    align-items: center; } }
+
 @media screen and (min-width: 768px) {
   body {
-    margin: 0;
-  }
-
+    margin: 0; }
   .section {
-    padding: 7rem 0 3rem;
-  }
-
+    padding: 7rem 0 3rem; }
   .section-title::before {
-    width: 76px;
-  }
-
+    width: 76px; }
   .nav {
-    height: calc(var(--header-height) + 1.5rem);
-  }
-
-  .nav__menu {
-    margin-left: auto;
-  }
-
-  .nav__list {
-    display: flex;
-  }
-
-  .nav__item {
-    margin-left: var(--mb-6);
-    margin-bottom: 0;
-  }
-
-  .nav__toggle {
-    display: none;
-  }
+    height: calc(3rem + 1.5rem); }
+    .nav__menu {
+      margin-left: auto; }
+    .nav__list {
+      display: flex; }
+    .nav__item {
+      margin-left: 3rem;
+      margin-bottom: 0; }
+    .nav__toggle {
+      display: none; }
   .home__container {
     height: 100vh;
     grid-template-columns: max-content max-content;
     justify-content: center;
-    align-items: center;
-  }
+    align-items: center; }
   .home__sneaker {
-    order: 1;
-  }
+    order: 1; }
   .home__shape {
     width: 376px;
-    height: 376px;
-  }
+    height: 376px; }
   .home__img {
     width: 470px;
     top: 3.5rem;
     right: 0;
-    left: -3rem;
-  }
-
+    left: -3rem; }
   .newsletter__container {
     grid-template-columns: max-content max-content;
     justify-content: center;
     align-items: center;
     padding: 4.5rem 2rem;
-    column-gap: 3rem;
-  }
-
+    column-gap: 3rem; }
   .newsletter__description {
-    margin-bottom: 0;
-  }
-
+    margin-bottom: 0; }
   .newsletter__subscribe {
     width: 360px;
-    height: max-content;
-  }
-}
+    height: max-content; } }
+
 @media screen and (min-width: 1024px) {
   .bd-grid {
     margin-left: auto;
-    margin-right: auto;
-  }
-
+    margin-right: auto; }
   .home__container {
-    column-gap: 8rem;
-  }
-
+    column-gap: 8rem; }
   .collection__container {
-    grid-template-columns: repeat(2, 415px);
-  }
-
+    grid-template-columns: repeat(2, 415px); }
   .new__container {
-    grid-template-columns: max-content 1fr;
-  }
-
+    grid-template-columns: max-content 1fr; }
   .new__mens {
     align-items: initial;
     justify-content: flex-end;
-    padding: 4rem 2rem;
-  }
-
-  .new__mens-img {
-    margin-bottom: var(--mb-6);
-  }
-}
+    padding: 4rem 2rem; }
+    .new__mens-img {
+      margin-bottom: 3rem; } }
